[IMP] Fix error grid list on Small Screen view

--- a/wp-content/themes/cambodia-ict-camp/style.css
+++ b/wp-content/themes/cambodia-ict-camp/style.css
@@ -48,7 +48,13 @@ a:hover{
 }
 
 .flex-box-row {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
+
+  flex-flow: row wrap;
   justify-content: center;
 }
 
